# e3cli

./: .gitignore  CLAUDE.md  COMMIT_EDITMSG  LICENSE  Makefile  README.md  README_zh-TW.md  config  index  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: e3cli.rb
e3cli/: __init__.py  __main__.py  agent_prompt.md  auth.py  cli.py  config.py  credential.py  formatting.py  http.py  i18n.py  semester.py  tui_menu.py
e3cli/ai/: __init__.py
e3cli/api/: assignments.py  client.py  courses.py  files.py  forums.py  members.py  messages.py  site.py
e3cli/commands/: _common.py  announcements.py  assignments.py  courses.py  download.py  interactive.py  login.py  logout.py  members.py  message.py  profile.py  schedule.py  setup.py  submit.py  sync.py
e3cli/scheduler/: cron.py
e3cli/storage/: db.py  models.py  tracking.py
gk/: config
logs/: HEAD
logs/refs/heads/: main
logs/refs/remotes/origin/: main
refs/remotes/origin/: main
refs/tags/: v0.1.0  v0.2.0  v0.3.0  v0.3.1  v0.3.2  v0.4.0  v0.4.1
scripts/: generate-formula.py  setup-homebrew-tap.sh
tests/: test_basic.py
