[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e3cli"
version = "0.6.1"
description = "NYCU E3 Moodle automation CLI — sync courses, download materials, submit assignments."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "E3CLI Contributors" }]
keywords = ["moodle", "nycu", "e3", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.9",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.18",
    "pymupdf>=1.23",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
e3cli = "e3cli.cli:app"

[project.urls]
Homepage = "https://github.com/junlinwk/e3cli"
Repository = "https://github.com/junlinwk/e3cli"
Issues = "https://github.com/junlinwk/e3cli/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--no-header -q"
